# xMach

./: LICENSE  README.md
kernel/: Makeconf.in  Makefile.in  aclocal.m4  configrules  configure  configure.in
kernel/CVS/: Entries
kernel/boot/: serial.S
kernel/boot/CVS/: Entries  Repository
kernel/boot/bsd/: i386_asm.h  trap_asm.h
kernel/boot/linux/: pc_asm.h  zImage
kernel/bootstrap/CVS/: Entries  Repository
kernel/generic/: Makerules.lib  configrules
kernel/generic/CVS/: Entries  Repository
kernel/generic/mig/: utils.c
kernel/html/CVS/: Entries  Repository
kernel/include/CVS/: Entries  Repository
kernel/include/device/: device.h  device_reply.h  device_request.h
kernel/include/mach/: bootstrap.h  default_pager.h  default_pager_helper.h  exc.h  mach4_interface.h  mach_host.h  mach_interface.h  mach_port.h  memory_object_default.h  memory_object_user.h  notify_user.h
kernel/include/mach_debug/: mach_debug.h
kernel/include/servers/: machid.h  machid_debug.h  machid_dpager.h  netname.h
kernel/kernel/: Makerules
kernel/kernel/CVS/: Entries  Repository
kernel/kernel/i386/: debug_i386.c  fpu.c  trap.c
kernel/kernel/i386at/: if_de6c.c  if_de6c.h  if_de6s.S
kernel/libmach/: Makerules
kernel/libmach/CVS/: Entries  Repository
kernel/libmach/c/: i16_bcopy.S  i16_bzero.S
kernel/libmach/standalone/: Makefile.in
kernel/libthreads/CVS/: Entries  Repository
kernel/mig/CVS/: Entries  Repository
lites/: ChangeLog  Makeconf  Makefile-version  Makefile.in  TODO.utah  configure
lites/CVS/: Entries  Repository
lites/conf/: MASTER  MASTER.h  MASTER.local  Makeconf  Makeconf.in  Makerules  Makevar  config.guess  configure.in  copyright  doconfig.sh  files  gensym.awk  move-if-change  newvers.sh
lites/conf/CVS/: Entries  Repository
lites/conf/i386/: MASTER  Makerules  files
lites/conf/i386/CVS/: Entries  Repository
lites/doc/: 941125.changes  950808.changes  FILES  README  README.lites-1.1.u1  README.netbsd  building  emulator-upgrading  install.freebsd  lites-on-freebsd  namei-macros  osdi94-bof-slides.ps  remaining-copyins  status-941116  status-941128
lites/doc/CVS/: Entries  Repository
lites/emulator/: Makefile.in  Makerules  Nbsd_1.h  bsd_1.cli  e_43ux.c  e_bnr.c  e_bsd.c  e_defs.h  e_hpbsd.c  e_hpux.c  e_hpux.h  e_linux.c  e_linux_getcwd.c  e_lite_sysent.c  e_mach_msg_server.c  e_mapped_time.c  e_mig_support.c  e_osf1.c  e_readwrite.c  e_stat.c  e_sysv.c  e_sysvipc.c  e_templates.h  e_ultrix.c  e_uname.c  emul_exec.c  emul_generic.c  emul_init.c  emul_mach.defs  emul_mach_interface.cli  emul_mapped.c  eproto.h  error_codes.c  signal.srv  syscall_table.h
lites/emulator/CVS/: Entries  Repository
lites/emulator/i386/: e_cmu_43ux_sysent.c  e_exception.c  e_isc4_sysent.c  e_linux_sysent.c  e_linux_trampoline.c  e_machinedep.c  e_signal.c  e_trampoline.c  ecrt0.c  emul_misc_asm.s  emul_vector.s
lites/emulator/maybe/: e_mapped_socket.c  process_self.c
lites/emulator/parisc/: Questions  Signals
lites/emulator/programs/: emulator_base.c  zprintbsd.c
lites/include/: Makefile.in
lites/include/CVS/: Entries  Repository
lites/include/i386/: ansi.h  cpu.h  exec.h  param.h  trap.h  types.h  vmparam.h
lites/include/mach/: cthread_internals.h  options.h
lites/include/sys/: aout.h  assert.h  buf.h  cdefs.h  cmu_queue.h  coff.h  conf.h  devfs.h  dirent.h  disk.h  disklabel.h  diskslice.h  elf.h  errno.h  exec.h  exec_file.h  fbio.h  fcntl.h  file.h  gprof.h  ioctl.h  ipc.h  kernel.h  macro_help.h  malloc.h  mbuf.h  mount.h  parallel.h  param.h  proc.h  reboot.h  resource.h  select.h  shared_lock.h  signal.h  signalvar.h  socketvar.h  sockio.h  som.h  stat.h  (+15 more)
lites/liblites/: Makefile.in  Makerules  bcmp.c  exec_file.c  memcmp.c
lites/liblites/CVS/: Entries  Repository
lites/liblites/i386/: ntoh.s
lites/server/: Makefile.in  Makerules
lites/server/CVS/: Entries  Repository
lites/server/conf/: MASTER  MASTER.local  Makefile.config  files  mkconfig.csh  newvers.sh  param.c  template.mk  version.major  version.variant
lites/server/i386/: conf.c  i386_exception.c  misc_asm.s  second_syscalls.s  serv_machdep.c
lites/server/kern/: init_main.c  kern_acct.c  kern_descrip.c  kern_exit.c  kern_malloc.c  kern_proc.c  kern_prot.c  kern_resource.c  kern_sig.c  kern_subr.c  kern_sysctl.c  kern_time.c  kern_xxx.c  makesyscalls.sh  subr_log.c  subr_prf.c  subr_xxx.c  sys_generic.c  sys_socket.c  syscalls.master  tty.c  tty_compat.c  tty_conf.c  tty_pty.c  tty_subr.c  uipc_domain.c  uipc_mbuf.c  uipc_socket.c  uipc_socket2.c  uipc_syscalls.c  uipc_usrreq.c  vfs_bio.c  vfs_cache.c  vfs_cluster.c  vfs_conf.c  vfs_lookup.c  vfs_subr.c  vfs_syscalls.c  vfs_vnops.c  vnode.c  (+1 more)
lites/server/libkern/: ffs.c  mach_error.c  queue.c
lites/server/msdosfs/: bootsect.h  bpb.h  denode.h  direntry.h  fat.h  lites-comp.h  msdosfs_conv.c  msdosfs_denode.c  msdosfs_fat.c  msdosfs_lookup.c  msdosfs_vfsops.c  msdosfs_vnops.c  msdosfsmount.h
lites/server/net/: bpf.c  bpf.h  bpf_compat.h  bpf_filter.c  bpfdesc.h  if.c  if.h  if_ethersubr.c  if_loop.c  if_ppp.c  if_ppp.h  if_sl.c  if_slvar.h  netisr.h  route.c  rtsock.c  slcompress.c  slcompress.h
lites/server/netccitt/: ccitt_proto.c  if_x25subr.c  llc_input.c  pk.h  pk_acct.c  pk_input.c  pk_llcsubr.c  pk_output.c  pk_subr.c  pk_usrreq.c  pk_var.h
lites/server/netinet/: if_ether.c  if_ether.h  igmp.c  in.c  in.h  in_cksum.c  in_pcb.c  in_pcb.h  in_proto.c  (+12 more)
updated-conf/kernel/: Makeconf
(+552 files in other folders)
